# slspack

./: Makefile.in  Makefile.inc.in  README.md  configure  configure.in
doc/: Makefile  install.tex  intro.tex  mv.tex  ref.tex  slspack.tex  solver.tex  utils.tex
example/: Makefile  exam.c  pardiso.lic
include/: config.h.in  data-types.h  matrix-utils.h  slspack.h  solver-amg.h  solver-fasp.h  solver-klu.h  solver-laspack.h  solver-lis.h  solver-mi20.h  solver-mumps.h  solver-pardiso.h  solver-petsc.h  solver-superlu.h  solver-sxamg.h  solver-umfpack.h  tags  utils.h  vector.h
src/: Makefile  Makefile.dep  matrix-utils.c  slspack.c  solver-amg.c  solver-fasp.c  solver-klu.c  solver-laspack.c  solver-lis.c  solver-mi20.c  solver-mumps.c  solver-pardiso.c  solver-petsc.c  solver-superlu.c  solver-sxamg.c  solver-umfpack.c  tags  utils.c  vector.c
utils/: makedeps
